# stac-extension-liability-claims

./: .github-description.txt  .github-topics.txt  .gitignore  .nojekyll  CHANGELOG.md  CLOUD-COVERAGE-CONFORMANCE-GUIDE.md  COMMANDS.md  COMMANDS.txt  CONTRIBUTING.md  DEPLOYMENT.md  DQV-ISO19157-MAPPING.md  EOVOC_ISO_SCHEMA_ALIGNMENT.md  INTEGRATION-PLAN.md  ISO-TC211-ALIGNMENT.md  ISO19115-3-vs-ISO19157-MAPPING.md  ISO19115-4-vs-ISO19157-3-COMPATIBILITY.md  ISO19157-INTEGRATION.md  ISO19157-UPDATE-SUMMARY.md  LICENSE  OGC-COMPLIANCE-ACTIONS.md  OGC-SUBMISSION-GUIDE.md  OGC-SUBMISSION-READY.md  PROV-IMPLEMENTATION-SUMMARY.md  PROV-ISO19115-MAPPING.md  PROV-QUICK-REFERENCE.md  PUBLISH.md  PUBLISHING.md  QUICK-REFERENCE.md  QUICK-START-REGISTRATION.md  QUICK-SUBMIT.md  README.md  REGISTRATION-STATUS.md  RELEASE-v1.1.0.md  SCHEMA-DIAGRAM.md  SCHEMA-FORMALIZATION-SUMMARY.md  STAC-API-COMPATIBILITY.md  STAC-EXTENSION-REGISTRATION.md  T21-DQ4IPT-ALIGNMENT-SUMMARY.md  T21-DQ4IPT-COMPATIBILITY-REPORT.md  T21-DQ4IPT-UPDATE-SUMMARY.md  (+19 more)
.github/: remark.yaml
examples/: collection-with-quality.json  collection-with-summaries.json  collection.json  dual-extension-item.json  item-cop-with-cloud-coverage.json  item-environmental.json  item-property-damage.json  item-with-ceos-ard-radar.json  item-with-dqv-quality.json  item-with-imagery-quality.json  item-with-iso19115-lineage.json  item-with-iso19157-quality.json  item-with-prov.json  item-with-quality.json  item-with-verifiable-credentials.json  item.json  semantic-lifting-example.ttl
json-schema/: iso19115-quality.json  iso19157-lineage.json  iso19157-quality.json  iso19157-scope.json  prov-ref.json  schema.json
(+123 files in other folders)
