# STAC Liability and Claims Extension - Package Configuration

[project]
name = "stac-liability-claims"
version = "1.0.0"
description = "STAC Extension for Liability and Claims Management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
keywords = ["stac", "geospatial", "liability", "claims", "insurance"]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/stac-extension-liability-claims"
Documentation = "https://github.com/yourusername/stac-extension-liability-claims/blob/main/README.md"
Repository = "https://github.com/yourusername/stac-extension-liability-claims"
Issues = "https://github.com/yourusername/stac-extension-liability-claims/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This is a STAC extension providing JSON schemas and documentation only
# No Python packages to install
packages = []
